Fix airdrop link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12" style="text-align: center;">
-                    <a href="https://github.com/semuxproject/semux/releases" class="btn btn-primary">
+                    <a href="https://www.semux.org/airdrop/eth" class="btn btn-warning">
                         <span data-i18n="ethAirdropTitle">Airdrop to ethereum holders:</span>
                         <span data-i18n="ethAirdropCTA">in progress, join now</span>
                     </a>
