--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                     <div class="col-xs-12 col-md-6">
                         <h3 data-i18n>The beginning</h3>
                         <ol>
-                            <li data-i18n="[html]getStarted1">Download and install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html" target="_blank">Java SE Runtime Environment 8</a> or above
-                            </li>
+                            <li data-i18n="[html]getStarted1">Download and install <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html" target="_blank">Java SE Runtime Environment</a></li>
                             <li data-i18n="[html]getStarted2">(Windows user) Download and install <a href="https://www.microsoft.com/en-us/download/details.aspx?id=30679" target="_blank">Microsoft Visual C++ 2012 Redistributable Package</a></li>
                             <li data-i18n="[html]getStarted3">Download the latest version of Semux Wallet below</li>
                         </ol>
@@ -505,8 +504,7 @@
                 interpolation: {
                     defaultVariables: {
                         "annThread": "https://bitcointalk.org/index.php?topic=2159012.0",
-                        "java8": "http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html",
-                        "java9": "http://www.oracle.com/technetwork/java/javase/downloads/jre9-downloads-3848532.html",
+                        "java": "http://www.oracle.com/technetwork/java/javase/downloads/index.html",
                         "vCpp2010Redist32": "https://www.microsoft.com/en-us/download/details.aspx?id=5555",
                         "vCpp2010Redist64": "https://www.microsoft.com/en-us/download/details.aspx?id=14632",
                         "vCpp2012Redist": "https://www.microsoft.com/en-us/download/details.aspx?id=30679",
