Update links to the new main repo

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <p data-i18n="[html]headlineDescriptionShort">Semux is an innovative high-performance <br>blockchain platform powered by <br><b>Semux BFT
                         consensus algorithm.</b></p>
                     <div style="display:inline-block;text-align:center;">
-                        <a href="https://github.com/semuxproject/semux/releases" class="btn btn-danger btn-download" data-i18n>Download Now!</a>
+                        <a href="https://github.com/semuxproject/semux-core/releases" class="btn btn-danger btn-download" data-i18n>Download Now!</a>
                         <ul class="list-inline list-social">
                             <li class="list-inline-item">
-                                <a href="https://github.com/semuxproject/semux" target="_blank" title="GitHub"><i class="ion-social-github"></i></a>
+                                <a href="https://github.com/semuxproject/semux-core" target="_blank" title="GitHub"><i class="ion-social-github"></i></a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://twitter.com/semuxproject" target="_blank" title="Twitter"><i class="ion-social-twitter"></i></a>
@@ -98,7 +98,7 @@
                     <p data-i18n="[html]headlineDescription"><b>Semux</b> is an innovative high-performance blockchain platform that powers decentralized
                         application. It's written purely in Java and powered by Semux BFT consensus algorithm. <br
                                 class="visible"><a
-                                href="https://github.com/semuxproject/semux/wiki" target="_blank" data-i18n="readMoreInWiki">>> Read more on the Wiki</a></p>
+                                href="https://github.com/semuxproject/semux-core/blob/master/docs" target="_blank" data-i18n="readMoreInWiki">>> Read more on the Wiki</a></p>
                 </div>
 
             </div>
@@ -138,7 +138,7 @@
                             <li data-i18n="[html]getStarted2">(Windows user) Download and install <a href="https://www.microsoft.com/en-us/download/details.aspx?id=30679" target="_blank">Microsoft Visual C++ 2012 Redistributable Package</a></li>
                             <li data-i18n="[html]getStarted3">Download the latest version of Semux Wallet below</li>
                         </ol>
-                        <a href="https://github.com/semuxproject/semux/releases" target="_blank" class="btn btn-danger" data-i18n>Download Now!</a>
+                        <a href="https://github.com/semuxproject/semux-core/releases" target="_blank" class="btn btn-danger" data-i18n>Download Now!</a>
                     </div>
                 </div>
                 <img class="artwork" src="img/wallet.png" alt="Wallet"/>
@@ -372,7 +372,7 @@
                     <div id="spoilerContent9" class="collapse" role="tabpanel"
                          aria-labelledby="spoilerHeader9" data-parent="#accordion">
                         <div class="spoiler-body">
-                            <p data-i18n="[html]faqWhatIsAValidatorOrADelegate">A delegate is a special account that represents the voters. Delegates with highest total votes are considered validators, who will be responsible for forging blocks. To register a delegate, you need to burn 1000 SEMs. <a href="https://github.com/semuxproject/semux/wiki/Delegates-and-Validators" target="_blank">More</a></p></div>
+                            <p data-i18n="[html]faqWhatIsAValidatorOrADelegate">A delegate is a special account that represents the voters. Delegates with highest total votes are considered validators, who will be responsible for forging blocks. To register a delegate, you need to burn 1000 SEMs. <a href="https://github.com/semuxproject/semux-core/blob/master/docs/Delegates-and-Validators.md" target="_blank">More</a></p></div>
                     </div>
                     <img class="arrow" src="img/arrow-down.svg" alt="Spoiler toggler"/>
                 </div>
@@ -400,7 +400,7 @@
                     <div id="spoilerContent11" class="collapse" role="tabpanel"
                          aria-labelledby="spoilerHeader11" data-parent="#accordion">
                         <div class="spoiler-body">
-                            <p><a href="https://github.com/semuxproject/semux/" target="_blank">https://github.com/semuxproject/semux/</a></p></div>
+                            <p><a href="https://github.com/semuxproject/semux-core/" target="_blank">https://github.com/semuxproject/semux-core/</a></p></div>
                     </div>
                     <img class="arrow" src="img/arrow-down.svg" alt="Spoiler toggler"/>
                 </div>
@@ -416,7 +416,7 @@
                 <div class="col-xs-12 col-md-6 text-right">
                     <ul class="list-inline list-social">
                         <li class="list-inline-item">
-                            <a href="https://github.com/semuxproject/semux" target="_blank" title="GitHub"><i class="ion-social-github"></i></a>
+                            <a href="https://github.com/semuxproject/semux-core" target="_blank" title="GitHub"><i class="ion-social-github"></i></a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://twitter.com/semuxproject" target="_blank" title="Twitter"><i class="ion-social-twitter"></i></a>
