--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>SEMUX - A New And Exciting Blockchain</title>
+    <title>SEMUX - High-performance Blockchain</title>
     <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -66,9 +66,8 @@
                         <span data-i18n="ethAirdropTitle">Airdrop to ethereum holders:</span>
                         <span data-i18n="ethAirdropCTA">in progress, join now</span>
                     </a>
-                    <h1 data-i18n="[html]headline">A New And <br>Exciting Blockchain</h1>
-                    <p data-i18n="[html]headlineDescriptionShort">Semux is an innovative high-performance <br>blockchain platform powered by <br><b>Semux BFT
-                        consensus algorithm.</b></p>
+                    <h1 data-i18n="[html]headline">High-performance <br>Blockchain</h1>
+                    <p data-i18n="[html]headlineDescriptionShort">Semux is an innovative high-performance blockchain platform, <br>powered by <b>Semux BFT consensus algorithm</b>.</p>
                     <div style="display:inline-block;text-align:center;">
                         <a href="https://github.com/semuxproject/semux-core/releases" class="btn btn-danger btn-download" data-i18n>Download Now!</a>
                         <ul class="list-inline list-social">
