--- a/index.html
+++ b/index.html
@@ -321,8 +321,7 @@
                     <div id="spoilerContent6" class="collapse" role="tabpanel"
                          aria-labelledby="spoilerHeader6" data-parent="#accordion">
                         <div class="spoiler-body">
-                            <p data-i18n="faqExchange">Not yet, we will be contacting exchanges in Q1-Q2 2018.</p></div>
-                    </div>
+                            <p data-i18n="faqExchange">Yes! We are currently listed on <a href="https://app.stocks.exchange/en/basic-trade/pair/BTC/SEM" target="_blank">stocks.exchange</a></p></div>                    </div>
                     <img class="arrow" src="img/arrow-down.svg" alt="Spoiler toggler"/>
                 </div>
                 <div class="spoiler">
@@ -350,9 +349,11 @@
                          aria-labelledby="spoilerHeader8" data-parent="#accordion">
                         <div class="spoiler-body">
                             <p data-i18n="[html]faqHowCanIGetSem">
+                              Buy them on <a href="https://app.stocks.exchange/en/basic-trade/pair/BTC/SEM" target="_blank">stocks.exchange</a><br>
                               Buy them on #trading of the official discord. Beware of scammers!<br>
                               Join the BTC Airdrop (Completed)<br>
-                              Join the Signature Campaign (Completed)<br>
+                              Join the <a href="https://www.semux.org/airdrop/eth">ETH Airdrop</a>
+                              Join the Signature Campaign (Ongoing)<br>
                               Contribute to the community<br>
                               Become a validator<br>
                               Vote for a validator who is willing to share block rewards (e.g. <a href="https://semux.info/pool/"  target="_blank">semux.info pool</a>)
@@ -379,7 +380,7 @@
                     <div class="spoiler-header" role="tab" id="spoilerHeader10">
                         <a class="collapsed" data-toggle="collapse" href="#spoilerContent10"
                            role="button" aria-expanded="false" aria-controls="spoilerContent10">
-                            <h3 data-i18n>What are expected transaction Fees?</h3>
+                            <h3 data-i18n>What are expected transaction fees?</h3>
                         </a>
                     </div>
                     <div id="spoilerContent10" class="collapse" role="tabpanel"
@@ -410,7 +411,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-6 copyright">
-                    &copy; 2017-2018 Semux Foundation
+                    &copy; 2017-2018 The Semux Developers
                 </div>
                 <div class="col-xs-12 col-md-6 text-right">
                     <ul class="list-inline list-social">
