Exchange: updated listing
included listing on stocks and bisq

--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
                     <div id="spoilerContent6" class="collapse" role="tabpanel"
                          aria-labelledby="spoilerHeader6" data-parent="#accordion">
                         <div class="spoiler-body">
-                            <p data-i18n="faqExchange">Not yet, we will be contacting exchanges in Q1-Q2 2018.</p></div>
+                            <p data-i18n="faqExchange">
+                                Semux is listed on <a href="https://app.stocks.exchange/en/basic-trade/pair/BTC/SEM/1D">Stocks.Exchange</a> and <a href="https://markets.bisq.network/?market=sem_btc">Bisq Network</a>
+                            </p></div>
                     </div>
                     <img class="arrow" src="img/arrow-down.svg" alt="Spoiler toggler"/>
                 </div>
