--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <div id="spoilerContent6" class="collapse" role="tabpanel"
                          aria-labelledby="spoilerHeader6" data-parent="#accordion">
                         <div class="spoiler-body">
-                            <p data-i18n="faqExchange">Yes! We are currently listed on <a href="https://app.stocks.exchange/en/basic-trade/pair/BTC/SEM" target="_blank">stocks.exchange</a></p></div>                    </div>
+                            <p data-i18n="[html]faqExchange">Yes! We are currently listed on <a href="https://app.stocks.exchange/en/basic-trade/pair/BTC/SEM" target="_blank">stocks.exchange</a></p></div>                    </div>
                     <img class="arrow" src="img/arrow-down.svg" alt="Spoiler toggler"/>
                 </div>
                 <div class="spoiler">
