Update Ethereum Airdrop Completion

--- a/index.html
+++ b/index.html
@@ -62,10 +62,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12" style="text-align: center;">
-                    <a href="https://www.semux.org/airdrop/eth" class="btn btn-warning">
-                        <span data-i18n="ethAirdropTitle">Airdrop to ethereum holders:</span>
-                        <span data-i18n="ethAirdropCTA">in progress, join now</span>
-                    </a>
                     <h1 data-i18n="[html]headline">High-performance <br>Blockchain</h1>
                     <p data-i18n="[html]headlineDescriptionShort">Semux is an innovative high-performance blockchain platform, <br>powered by <b>Semux BFT consensus algorithm</b>.</p>
                     <div style="display:inline-block;text-align:center;">
@@ -164,9 +160,7 @@
                         <li data-i18n="bitcoinAirdropRewards">Airdrop to bitcoin holders: 1,207,905 SEM</li>
                         <li>
                             <span data-i18n="ethAirdropTitle">Airdrop to ethereum holders:</span>
-                            <a href="https://www.semux.org/airdrop/eth" data-i18n="altcoinEthCTA">
-                                in progress, join now
-                            </a>
+                            Completed August 18, 2018. 
                         </li>
                         <li data-i18n="altcoinAirdropRewards">Airdrop to altcoin holders: under consideration</li>
                     </ul>
